import "goby/acomms/protobuf/driver_base.proto";

package goby.acomms.protobuf;

message MMDriverConfig
{
  extend DriverConfig
  {
    // reset all NVRAM settings to factory before
    // setting ours ($CCCFG,ALL,0)
    optional bool reset_nvram = 1000 [default = false]; 
    
    // add NVRAM configuration sentences to send to the modem
    // on startup (e.g. "$CACFG,SRC,1"). Omit the "$CACFG," here.
    // To reinitialize all values to factory settings, send "ALL,0"
    repeated string nvram_cfg = 1001; // e.g. "SRC,3"

    // set to a non-zero value to indicate that we are using the hydroid gateway
    // buoy which has a non-standard sentence structure (#M / !M prefixes)
    // *do not set for the normal WHOI Micro-Modem*
    optional uint32 hydroid_gateway_id = 1002 [default = 0]; 
  }
}
